/*
 * $Id: ChangeLog,v 1.6738 2010/10/02 20:26:08 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2010-10-03 16:31 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/gzio.c
    + explicitely include <errno.h> as some compilers do not include it
      automatically (fe. PellesC, XCC)

2010-10-03 03:04 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * ChangeLog
    ! corrected some typo in log entries

2010-10-02 22:24 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/compress.c
  * source/rtl/zlib.h
    ! carried forward the missing previous xHarbour-modified version of
      compress() ie. to override the default compression level with user
      defined level.

2010-10-02 05:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/zlib/adler32.c
  * source/rtl/zlib/compress.c
  * source/rtl/zlib/crc32.c
  * source/rtl/zlib/crc32.h
  * source/rtl/zlib/deflate.c
  * source/rtl/zlib/deflate.h
  * source/rtl/zlib/gzio.c
  * source/rtl/zlib/infback.c
  * source/rtl/zlib/inffast.c
  * source/rtl/zlib/inffast.h
  * source/rtl/zlib/inffixed.h
  * source/rtl/zlib/inflate.c
  * source/rtl/zlib/inflate.h
  * source/rtl/zlib/inftrees.c
  * source/rtl/zlib/inftrees.h
  * source/rtl/zlib/trees.c
  * source/rtl/zlib/trees.h
  * source/rtl/zlib/uncompr.c
  * source/rtl/zlib/zconf.h
  * source/rtl/zlib/zconf.in.h
  * source/rtl/zlib/zlib.h
  * source/rtl/zlib/zutil.c
  * source/rtl/zlib/zutil.h
    ! updated to version 1.2.5
    WARNING: BCC 6.2 users may not be able to compile this version because
    BCC32 failed on its back end engine when compiling deflate.c. Hence,
    BCC 6.2 users should either stay with version 1.2.3 or use the DLL version.

2010-09-29 07:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/png/png.c
  * contrib/png/png.h
  * contrib/png/pngconf.h